# routes/routes.go
@@ -2,21 +2,26 @@ package routes
 
 import (
 	"g0/api/auth/login"
+	"g0/api/auth/me"
 	"g0/api/auth/register"
 	"g0/api/health"
+	"g0/api/products"
+	productIdInfo "g0/api/products/id"
+	"g0/middleware"
 
 	"github.com/labstack/echo/v5"
 )
 
-func RegisterRoute(e *echo.Echo) {
-	api := e.Group("/api")
+func Route(e *echo.Echo) {
+	api := e.Group("")
 
 	// Rotas públicas
-	public := api.Group("")
+	authGroup := api.Group("auth")
+	systemGroup := api.Group("system")
 
-	health.RegisterRoute(public)
-	register.RegisterRoute(public)
-	login.RegisterRoute(public)
+	health.Route(systemGroup)
+	register.Route(authGroup)
+	login.Route(authGroup)
 
 	// OpenAPI
 	e.Static("/openapi", "./docs")
@@ -47,6 +52,13 @@ func RegisterRoute(e *echo.Echo) {
 	})
 
 	// Rotas privadas
-	// private := api.Group("")
-	// private.Use(middleware.JWT)
+	private := api.Group("")
+	private.Use(middleware.JWT)
+
+	authPrivateGroup := private.Group("/auth")
+	productsPrivateGroup := private.Group("/products")
+
+	me.Route(authPrivateGroup)
+	products.Route(productsPrivateGroup)
+	productIdInfo.Route(productsPrivateGroup)
 }
